# title_detector

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: refs.bib  refs.bib.bak  report.aux  report.bbl  report.blg  report.tex
models/: title_detector.joblib
notebooks/: jupyter_helpers.py  semantic_evolution.ipynb  semantic_evolution_fastai.ipynb  semantic_evolution_pytorch.ipynb  title_detector.ipynb  title_detector_fastai.ipynb  title_detector_pytorch.ipynb
notebooks/.ipynb_checkpoints/: semantic_evolution_pytorch-checkpoint.ipynb
title_detector/: config.py  data_preparation.py  main.py  pipelines.py
title_detector/models/: master_model.py  pytorch_model.py  string_model.py
title_detector/sample/: test_sections_data.csv  test_sections_data.csv.output
title_detector/tests/: tests.py
title_detector/utils/: analysis.py  logger.py  validators.py
